@@ -760,6 +760,8 @@
 #define ID_VIEW_HIDEDRIVERSERVICES      40273
 #define ID_VIEW_SECTIONPLACEHOLDER      40274
 #define ID_VIEW_SCROLLTONEWPROCESSES    40275
+#define ID_TOOLS_STARTORIGINALTASKMANAGER 40276
+#define ID_TOOLS_STARTTASKMANAGER       40277
 #define IDDYNAMIC                       50000
 #define IDPLUGINS                       55000
 #define IDPLUGINS_END                   56000
@@ -769,7 +771,7 @@
 #ifdef APSTUDIO_INVOKED
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        206
-#define _APS_NEXT_COMMAND_VALUE         40276
+#define _APS_NEXT_COMMAND_VALUE         40278
 #define _APS_NEXT_CONTROL_VALUE         1361
 #define _APS_NEXT_SYMED_VALUE           137
 #endif
